--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/lindenbark/gawain.git"
   },
-  "author": "Team Lindenbark",
+  "author": "JongChan Choi",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lindenbark/gawain/issues"
