--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "make-dir": "^3.0.0",
     "quickjs-static": "0.190918.3",
     "request": "^2.88.0",
+    "rollup": "^1.23.1",
     "tar": "^5.0.5",
     "yargs": "^14.0.0"
   },
