--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "rollup": "^1.23.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
     "tar": "^5.0.5",
+    "tslib": "*",
+    "typescript": "*",
     "yargs": "^14.0.0"
   },
   "devDependencies": {
